--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>My Simple Website</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #f9f9f9;
-      margin-top: 50px;
-    }
-    h1 {
-      color: #333;
-    }
-    p {
-      color: #666;
-    }
-  </style>
+  <title>Mon site GitHub</title>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>This is a simple HTML page hosted with GitHub Pages.</p>
+  <nav>
+    <a href="index.html">Accueil</a> |
+    <a href="about.html">À propos</a> |
+    <a href="projects.html">Projets</a> |
+    <a href="contact.html">Contact</a>
+  </nav>
+
+  <h1>Bienvenue sur mon site !</h1>
+  <p>Ceci est la page d'accueil.</p>
 </body>
 </html>
+
