--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 
     <div style="text-align: center;">
-      <img src="/aled.jpg" alt="Image d'accueil" style="display:block; margin:20px auto; width:300px; height:auto; border-radius:10px;">
+      <img src="aled.jpg" alt="Image d'accueil" style="display:block; margin:20px auto; width:300px; height:auto; border-radius:10px;">
       
     </div>
    
@@ -113,4 +113,5 @@
 
 </body>
 </html>
+
 
