--- a/Modelisation/Robotique_theorique/Transformation_homogene.html
+++ b/Modelisation/Robotique_theorique/Transformation_homogene.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Robotique Théorique</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -88,9 +88,9 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-        <li><a href="/Modelisation/Robotique_theorique/Transformation_homogene.html" class="active">Transformation Homogène</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
+        <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html" class="active">Transformation Homogène</a></li>
+        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
       </ul>
       </ul>
     </aside>
@@ -413,7 +413,7 @@
 
     <p>avec un vecteur <em>[1,0,0]</em> d'origine <em>[0.25,0,1]</em>:
 
-  <img src="\Modelisation\Robotique_theorique\transforme_homogene_screen.jpg" alt="Image d'exemple transformation homogène">
+  <img src="Modelisation\Robotique_theorique\transforme_homogene_screen.jpg" alt="Image d'exemple transformation homogène">
 <details >
 <summary > <b style="color: red;">Transformation homogène sur Python</b> 
     </summary >
@@ -579,3 +579,4 @@ plt.show()
 
 </body>
 </html>
+
