--- a/Modelisation/Robotique_theorique/Robotique_theorique.html
+++ b/Modelisation/Robotique_theorique/Robotique_theorique.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Robotique Théorique</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
 
@@ -11,7 +11,7 @@
   <div id="navbar"></div>
   <script>
   // Load navbar dynamically from external file
-  fetch("navbar.html")
+  fetch("../../navbar.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -124,4 +124,5 @@
 
 </body>
 </html>
+
 
