--- a/Modelisation/Robotique_theorique/mgd_mgi_6axes.html
+++ b/Modelisation/Robotique_theorique/mgd_mgi_6axes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Robotique Théorique</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("navbar.html")
+  fetch("../../navbar.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -878,3 +878,4 @@ print(np.round(q[:6],2))
 </body>
 
 </html>
+
