--- a/Modelisation/Robotique_theorique/Transformation_homogene.html
+++ b/Modelisation/Robotique_theorique/Transformation_homogene.html
@@ -88,9 +88,9 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-        <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html" class="active">Transformation Homogène</a></li>
-        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
+        <li><a href="Transformation_homogene.html" class="active">Transformation Homogène</a></li>
+        <li><a href="mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="convention_DH.html">Convention DH</a></li>
       </ul>
       </ul>
     </aside>
@@ -413,7 +413,7 @@
 
     <p>avec un vecteur <em>[1,0,0]</em> d'origine <em>[0.25,0,1]</em>:
 
-  <img src="Modelisation\Robotique_theorique\transforme_homogene_screen.jpg" alt="Image d'exemple transformation homogène">
+  <img src="transforme_homogene_screen.jpg" alt="Image d'exemple transformation homogène">
 <details >
 <summary > <b style="color: red;">Transformation homogène sur Python</b> 
     </summary >
@@ -579,5 +579,6 @@ plt.show()
 
 </body>
 </html>
+
 
 
