--- a/Modelisation/Robotique_theorique/mgd_mgi_6axes.html
+++ b/Modelisation/Robotique_theorique/mgd_mgi_6axes.html
@@ -88,9 +88,9 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-        <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
-        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html" class="active">Résolution MGD & MGI seriel</a></li>
-        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
+        <li><a href="Transformation_homogene.html">Transformation Homogène</a></li>
+        <li><a href="mgd_mgi_6axes.html" class="active">Résolution MGD & MGI seriel</a></li>
+        <li><a href="convention_DH.html">Convention DH</a></li>
       </ul>
       </ul>
     </aside>
@@ -143,7 +143,7 @@
 
     </p>
 
-    <img src="Modelisation/Robotique_theorique/8_possibilités.png" alt="possibilites">
+    <img src="8_possibilités.png" alt="possibilites">
 
     <div class="legend"> 
       Les 8 différentes posibilités de configuration d'un robot pour un point dans l'espace
@@ -462,7 +462,7 @@ np.round([position_effecteur[0],position_effecteur[1],position_effecteur[2],rota
 </p>
 
 
- <img src="Modelisation/Robotique_theorique/q1.png" alt="Vue_de_coté_et_de_haut_d'un_robot_6_axes"> 
+ <img src="q1.png" alt="Vue_de_coté_et_de_haut_d'un_robot_6_axes"> 
  <div class="legend">
   Vue de coté et de haut d'un robot 6 axes quelconque
  </div>
@@ -492,7 +492,7 @@ np.round([position_effecteur[0],position_effecteur[1],position_effecteur[2],rota
 <summary > <b style="color: red;">Preuve théorique de q<sub>2</sub> et q<sub>3</sub></b>
     </summary >
     <p >
-         <img src="Modelisation/Robotique_theorique/q2.png" alt="Schema_3_axes">
+         <img src="q2.png" alt="Schema_3_axes">
          <div class="legend">
           Schema pour calcul des angles q<sub>2</sub> et q<sub>3</sub> d'un robot 3 axes
          </div> 
@@ -878,4 +878,5 @@ print(np.round(q[:6],2))
 </body>
 
 </html>
+
 
