--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    <li><a href="../../index.html" class="active">Accueil</a></li>
+    <li><a href="index.html" class="active">Accueil</a></li>
     <li>
       <a href="#">Modélisation Systèmes et Robotique ▼</a>
       <ul>
@@ -40,8 +40,8 @@
         <li><a href="Articulation.html">Articulation</a></li>
       </ul>
     </li>
-    <li><a href="../../A_propos.html">À propos</a></li>
-    <li><a href="../../test.html">test</a></li>
+    <li><a href="A_propos.html">À propos</a></li>
+    <li><a href="test.html">test</a></li>
     <!-- Night mode toggle button inside navbar -->
      <li class="night-mode-btn">
       <button id="themeToggle">🌙 Night Mode</button>
@@ -61,5 +61,6 @@
     }
   });
 </script>
+
 
 
