--- a/Modelisation/Robotique_theorique/Robotique_theorique.html
+++ b/Modelisation/Robotique_theorique/Robotique_theorique.html
@@ -11,7 +11,7 @@
   <div id="navbar"></div>
   <script>
   // Load navbar dynamically from external file
-  fetch("../../navbar.html")
+  fetch("navbar_robot_theo.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -124,6 +124,7 @@
 
 </body>
 </html>
+
 
 
 
