--- a/Modelisation/Robotique_theorique/Transformation_homogene.html
+++ b/Modelisation/Robotique_theorique/Transformation_homogene.html
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("../../navbar.html")
+  fetch("navbar_robot_theo.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -579,6 +579,7 @@ plt.show()
 
 </body>
 </html>
+
 
 
 
