--- a/Modelisation/Robotique_theorique/mgd_mgi_6axes.html
+++ b/Modelisation/Robotique_theorique/mgd_mgi_6axes.html
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("../../navbar.html")
+  fetch("navbar_robot_theo.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -878,5 +878,6 @@ print(np.round(q[:6],2))
 </body>
 
 </html>
+
 
 
