--- a/A_propos.html
+++ b/A_propos.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>À propos</title>
-  <link rel="stylesheet" href="style.css"> <!-- reuse your main stylesheet -->
+  <link rel="stylesheet" href="/style.css"> <!-- reuse your main stylesheet -->
 
   <!-- Navbar insérée dynamiquement -->
   <div id="navbar"></div>
 <script>
   // Load navbar dynamically from external file
-  fetch("navbar.html")
+  fetch("/navbar.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -126,4 +126,3 @@
 </footer>
 
 </html>
-
