--- a/navbar.html
+++ b/navbar.html
@@ -1,47 +1,47 @@
 <nav>
   <ul>
-    <li><a href="index.html" class="active">Accueil</a></li>
+    <li><a href="/index.html" class="active">Accueil</a></li>
     <li>
       <a href="#">Modélisation Systèmes et Robotique ▼</a>
       <ul>
-        <li><a href="Modelisation/Robotique_theorique/Robotique_theorique.html">Robotique Théorique</a></li>
-        <li><a href="Modelisation/Robot_classique.html">Robot Classique</a></li>
-        <li><a href="Modelisation/Commande_optimale.html">Commande Optimale</a></li>
+        <li><a href="/Modelisation/Robotique_theorique/Robotique_theorique.html">Robotique Théorique</a></li>
+        <li><a href="/Modelisation/Robot_classique.html">Robot Classique</a></li>
+        <li><a href="/Modelisation/Commande_optimale.html">Commande Optimale</a></li>
       </ul>
     </li>
     <li>
       <a href="#">Projets Hardware ▼</a>
       <ul>
-        <li><a href="Robot_Delta.html">Robot Delta</a></li>
-        <li><a href="Robot_gravity_cancel.html">3 DOF Gravity Cancel</a></li>
-        <li><a href="Robot_self_balancing.html">Robot Self Balancing</a></li>
+        <li><a href="/Robot_Delta.html">Robot Delta</a></li>
+        <li><a href="/Robot_gravity_cancel.html">3 DOF Gravity Cancel</a></li>
+        <li><a href="/Robot_self_balancing.html">Robot Self Balancing</a></li>
       </ul>
     </li>
     <li>
       <a href="#">Vision par Ordinateur ▼</a>
       <ul>
-        <li><a href="Vision_Software.html">Software</a></li>
-        <li><a href="Vision_Hardware.html">Hardware</a></li>
-        <li><a href="Vision_link_SoftHard.html">Liaison Soft//Hard</a></li>
+        <li><a href="/Vision_Software.html">Software</a></li>
+        <li><a href="/Vision_Hardware.html">Hardware</a></li>
+        <li><a href="/Vision_link_SoftHard.html">Liaison Soft//Hard</a></li>
       </ul>
     </li>
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
       <ul>
-        <li><a href="Automatique_lineaire.html">Automatique linéaire</a></li>
-        <li><a href="Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
-        <li><a href="PLC.html">PLC</a></li>
+        <li><a href="/Automatique_lineaire.html">Automatique linéaire</a></li>
+        <li><a href="/Automatique_non_lineaire.html">Automatique non-linéaire</a></li>
+        <li><a href="/PLC.html">PLC</a></li>
       </ul>
     </li>
     <li>
       <a href="#">Autres (Hardware et Technique) ▼</a>
       <ul>
-        <li><a href="Motorisation.html">Motorisation</a></li>
-        <li><a href="Articulation.html">Articulation</a></li>
+        <li><a href="/Motorisation.html">Motorisation</a></li>
+        <li><a href="/Articulation.html">Articulation</a></li>
       </ul>
     </li>
-    <li><a href="A_propos.html">À propos</a></li>
-    <li><a href="test.html">test</a></li>
+    <li><a href="/A_propos.html">À propos</a></li>
+    <li><a href="/test.html">test</a></li>
     <!-- Night mode toggle button inside navbar -->
      <li class="night-mode-btn">
       <button id="themeToggle">🌙 Night Mode</button>
@@ -61,6 +61,3 @@
     }
   });
 </script>
-
-
-
