--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="navbar"></div>
 <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar.html")
     .then(response => response.text())  // Read the content as text prcque HTML = text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -93,7 +93,7 @@
 
 
     <div style="text-align: center;">
-      <img src="/aled.jpg" alt="Image d'accueil" style="display:block; margin:20px auto; width:300px; height:auto; border-radius:10px;">
+      <img src="aled.jpg" alt="Image d'accueil" style="display:block; margin:20px auto; width:300px; height:auto; border-radius:10px;">
       
     </div>
    
@@ -113,3 +113,4 @@
 
 </body>
 </html>
+
