--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    <li><a href="/index.html" class="active">Accueil</a></li>
+    <li><a href="index.html" class="active">Accueil</a></li>
     <li>
       <a href="#">Modélisation Systèmes et Robotique ▼</a>
       <ul>
@@ -60,4 +60,5 @@
     }
   });
 </script>
+
 
