--- a/Modelisation/Robotique_theorique/Controle_force.html
+++ b/Modelisation/Robotique_theorique/Controle_force.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Robotique Théorique</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -88,14 +88,14 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-        <li><a href="/Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/parallele.html">Robot parallele</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/Controle_force.html" class="active">Commande en Force</a></li>
+        <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
+        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
+        <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
+        <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
+        <li><a href="Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
+        <li><a href="Modelisation/Robotique_theorique/parallele.html">Robot parallele</a></li>
+        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" class="active">Commande en Force</a></li>
       </ul>
       </ul>
     </aside>
@@ -111,7 +111,7 @@
             contact avec son environnement.
         </p>
 
-        <img src="/Modelisation/Robotique_theorique/cobot.jpg" alt="robot parallele">
+        <img src="Modelisation/Robotique_theorique/cobot.jpg" alt="robot parallele">
             <div class="legend">
                     <p>Cobots (Universal Robot) utilisé pour la soudure</p>
             </div> 
@@ -357,7 +357,7 @@
             Ces codes sont à utiliser ensemble et sont sur <b>Matlab</b> pour faciliter les calculs matriciels.
         </p>
 
-        <img src="/Modelisation/Robotique_theorique/robot_animation.gif" alt="inverse Dynamics">
+        <img src="Modelisation/Robotique_theorique/robot_animation.gif" alt="inverse Dynamics">
             <div class="legend">
                     <p>Gif Resultat 2 axes sans force exterieur </p>
             </div> 
@@ -754,4 +754,5 @@ end
 </footer>
 
 </body>
+
 </html>
