--- a/Modelisation/Robotique_theorique/jacobienne_manipulabilite.html
+++ b/Modelisation/Robotique_theorique/jacobienne_manipulabilite.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Robotique Théorique</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -88,11 +88,11 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-        <li><a href="/Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" class="active">Jacobienne</a></li>
+        <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
+        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
+        <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
+        <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" class="active">Jacobienne</a></li>
       </ul>
       </ul>
     </aside>
@@ -844,7 +844,7 @@ print("Q5 =", Q5)
     </p>
   </div>
 
-    <img src="/Modelisation/Robotique_theorique/ellipsoid.png" alt="ellipsoid Manipulabilité">
+    <img src="Modelisation/Robotique_theorique/ellipsoid.png" alt="ellipsoid Manipulabilité">
   <div class="legend">
           <p>visualisation de l'ellipsoïde de manipulabilité</p>
   </div>
@@ -971,7 +971,7 @@ plt.show()
   <br>
 </p>
 
-  <img src="/Modelisation/Robotique_theorique/yoshikawa.png" alt="scatteur Manipulabilité">
+  <img src="Modelisation/Robotique_theorique/yoshikawa.png" alt="scatteur Manipulabilité">
   <div class="legend">
           <p>Scatteur manipulabilité de Yoshikawa pour un 2 axes</p>
   </div>
@@ -1078,4 +1078,5 @@ plt.show()
   </footer>
 
 </body>
+
 </html>
