--- a/A_propos.html
+++ b/A_propos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>À propos</title>
-  <link rel="stylesheet" href="/style.css"> <!-- reuse your main stylesheet -->
+  <link rel="stylesheet" href="style.css"> <!-- reuse your main stylesheet -->
 
   <!-- Navbar insérée dynamiquement -->
   <div id="navbar"></div>
@@ -126,4 +126,5 @@
 </footer>
 
 </html>
+
 
