--- a/Modelisation/Robotique_theorique/Impedance_Admittance.html
+++ b/Modelisation/Robotique_theorique/Impedance_Admittance.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Robotique Théorique</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
 
@@ -645,3 +645,4 @@ end
 </body>
 
 </html>
+
