--- a/Modelisation/Robotique_theorique/Robotique_theorique.html
+++ b/Modelisation/Robotique_theorique/Robotique_theorique.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Robotique Théorique</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
 
@@ -124,4 +124,5 @@
 
 </body>
 </html>
+
 
