--- a/Modelisation/Robotique_theorique/Impedance_Admittance.html
+++ b/Modelisation/Robotique_theorique/Impedance_Admittance.html
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("navbar.html")
+  fetch("navbar_robot_theo.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -645,4 +645,5 @@ end
 </body>
 
 </html>
+
 
