--- a/Modelisation/Robotique_theorique/Controle_force.html
+++ b/Modelisation/Robotique_theorique/Controle_force.html
@@ -88,14 +88,15 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-        <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
+         <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
         <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
         <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
         <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
         <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
         <li><a href="Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
         <li><a href="Modelisation/Robotique_theorique/parallele.html">Robot parallele</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" class="active">Commande en Force</a></li>
+        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" class="active" >Commande en Force</a></li>
+        <li><a href="Modelisation/Robotique_theorique/Impedance_Admittance.html" >Impedance & Admitance</a></li>
       </ul>
       </ul>
     </aside>
@@ -756,4 +757,5 @@ end
 </body>
 
 </html>
+
 
