--- a/Modelisation/Robotique_theorique/parallele.html
+++ b/Modelisation/Robotique_theorique/parallele.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Robotique Théorique</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar_robot_theo.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -88,13 +88,15 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-        <li><a href="/Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
-        <li><a href="/Modelisation/Robotique_theorique/parallele.html" class="active">Robot parallele</a></li>
+        <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
+        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
+        <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
+        <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
+        <li><a href="Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
+        <li><a href="Modelisation/Robotique_theorique/parallele.html" class="active">Robot parallele</a></li>
+        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" >Commande en Force</a></li>
+        <li><a href="Modelisation/Robotique_theorique/Impedance_Admittance.html" >Impedance & Admitance</a></li>
       </ul>
       </ul>
     </aside>
@@ -111,7 +113,7 @@
         pick-and-place, les simulateurs de mouvement ou certains procédés d’usinage.
       </p>
 
-      <img src="/Modelisation/Robotique_theorique/tripetron.png" alt="robot parallele">
+      <img src="Modelisation/Robotique_theorique/tripetron.png" alt="robot parallele">
       <div class="legend">
               <p>Exemple de robot avec une structure parallele (tripetron parallele)</p>
       </div> 
@@ -136,7 +138,7 @@
         </p>
       </div>
 
-      <img src="/Modelisation/Robotique_theorique/scara_class_para.png" alt="mouvement espace articulaire">
+      <img src="Modelisation/Robotique_theorique/scara_class_para.png" alt="mouvement espace articulaire">
       <div class="legend">
               <p>Différence entre respectivement, un robot scara classique et parallele </p>
       </div> 
@@ -166,7 +168,7 @@
         la position de l'effecteur final on doit trouver les intersections entre deux cercles 
       </p>
 
-      <img src="/Modelisation/Robotique_theorique/intersection_cercle.png" alt="deux_cercles">
+      <img src="Modelisation/Robotique_theorique/intersection_cercle.png" alt="deux_cercles">
       <div class="legend">
               <p>Schema intersection entre deux cercles </p>
       </div> 
@@ -185,7 +187,7 @@
           calcul l'intersection au niveau des coudes ± la moitié de la longueur de la dite base  : 
         </p> 
 
-        <img src="/Modelisation/Robotique_theorique/L_base_outil.png" alt="deux_cercles_outil">
+        <img src="Modelisation/Robotique_theorique/L_base_outil.png" alt="deux_cercles_outil">
         <div class="legend">
                 <p>Schema Tips base d'outil</p>
         </div> 
@@ -277,7 +279,7 @@ else:
 
       <p> Pour le MGI d'un robot parallele on suit presque une même méthode à chaque fois</p>
 
-      <img src="/Modelisation/Robotique_theorique/calcul_para.png" alt="Schema MGi">
+      <img src="Modelisation/Robotique_theorique/calcul_para.png" alt="Schema MGi">
       <div class="legend">
               <p>Schema de résolution du MGI pour un robot parallele</p>
       </div> 
@@ -398,7 +400,7 @@ else:
       </div>
 
 
-      <img src="/Modelisation/Robotique_theorique/result_scara_para.jpg" alt="PLot MGi">
+      <img src="Modelisation/Robotique_theorique/result_scara_para.jpg" alt="PLot MGi">
       <div class="legend">
               <p>Resultat de la modélisation avec le code</p>
       </div> 
@@ -668,4 +670,5 @@ J = A^+ \, B
 </footer>
 
 </body>
+
 </html>
