--- a/Modelisation/Robotique_theorique/Robotique_theorique.html
+++ b/Modelisation/Robotique_theorique/Robotique_theorique.html
@@ -81,15 +81,15 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-         <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
-        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
-        <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
-        <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
-        <li><a href="Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
-        <li><a href="Modelisation/Robotique_theorique/parallele.html">Robot parallele</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" >Commande en Force</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Impedance_Admittance.html">Impedance & Admitance</a></li>
+         <li><a href="Transformation_homogene.html">Transformation Homogène</a></li>
+        <li><a href="mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="convention_DH.html">Convention DH</a></li>
+        <li><a href="generation_mouvement.html">Génération de mouvement</a></li>
+        <li><a href="jacobienne_manipulabilite.html" >Jacobienne</a></li>
+        <li><a href="redondance.html">Redondance</a></li>
+        <li><a href="parallele.html">Robot parallele</a></li>
+        <li><a href="Controle_force.html" >Commande en Force</a></li>
+        <li><a href="Impedance_Admittance.html">Impedance & Admitance</a></li>
       </ul>
     </aside>
 
@@ -130,6 +130,7 @@
 
 </body>
 </html>
+
 
 
 
