--- a/Modelisation/Robotique_theorique/Controle_force.html
+++ b/Modelisation/Robotique_theorique/Controle_force.html
@@ -88,15 +88,15 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-         <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
-        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
-        <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
-        <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
-        <li><a href="Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
-        <li><a href="Modelisation/Robotique_theorique/parallele.html">Robot parallele</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" class="active" >Commande en Force</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Impedance_Admittance.html" >Impedance & Admitance</a></li>
+          <li><a href="Transformation_homogene.html">Transformation Homogène</a></li>
+        <li><a href="mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="convention_DH.html">Convention DH</a></li>
+        <li><a href="generation_mouvement.html">Génération de mouvement</a></li>
+        <li><a href="jacobienne_manipulabilite.html" >Jacobienne</a></li>
+        <li><a href="redondance.html">Redondance</a></li>
+        <li><a href="parallele.html">Robot parallele</a></li>
+        <li><a href="Controle_force.html" class="active">Commande en Force</a></li>
+        <li><a href="Impedance_Admittance.html">Impedance & Admitance</a></li>
       </ul>
       </ul>
     </aside>
@@ -112,7 +112,7 @@
             contact avec son environnement.
         </p>
 
-        <img src="Modelisation/Robotique_theorique/cobot.jpg" alt="robot parallele">
+        <img src="cobot.jpg" alt="robot parallele">
             <div class="legend">
                     <p>Cobots (Universal Robot) utilisé pour la soudure</p>
             </div> 
@@ -358,7 +358,7 @@
             Ces codes sont à utiliser ensemble et sont sur <b>Matlab</b> pour faciliter les calculs matriciels.
         </p>
 
-        <img src="Modelisation/Robotique_theorique/robot_animation.gif" alt="inverse Dynamics">
+        <img src="robot_animation.gif" alt="inverse Dynamics">
             <div class="legend">
                     <p>Gif Resultat 2 axes sans force exterieur </p>
             </div> 
@@ -757,5 +757,6 @@ end
 </body>
 
 </html>
+
 
 
