--- a/Modelisation/Robotique_theorique/convention_DH.html
+++ b/Modelisation/Robotique_theorique/convention_DH.html
@@ -449,7 +449,7 @@ plt.show()
     <p>
       <a href="https://gjlaurent.github.io/assets/cours/polyRobotiqueIndustrielle.pdf">Robotique industrielle de Guillaume Laurent & Nicolas Chaillet 2024</a> <br>
       <a href="https://www.jeed.go.jp/english/ia/7thIA/u603g20000000krl-att/u603g20000000l1f.pdf">Manuel de programmation du PA10 par Mitsubushi</a> <br>
-      <a href="Modelisation\Robotique_theorique\PA10_Moving_Range.pdf">Range de déplacement du PA10 par Mitsubushi</a> <br>
+      <a href="PA10_Moving_Range.pdf">Range de déplacement du PA10 par Mitsubushi</a> <br>
       <a href="https://home.mis.u-picardie.fr/~fabio/Eng/documenti/Teaching/RI21-22/RobInd_Ch3p1.pdf">Cours Modélisation robotique industrielle université de Picardie</a> <br>
     </p>
 </main>
@@ -461,6 +461,7 @@ plt.show()
 
 </body>
 </html>
+
 
 
 
