--- a/Modelisation/Robotique_theorique/navbar_robot_theo.html
+++ b/Modelisation/Robotique_theorique/navbar_robot_theo.html
@@ -4,9 +4,9 @@
     <li>
       <a href="#">Modélisation Systèmes et Robotique ▼</a>
       <ul>
-        <li><a href="Modelisation/Robotique_theorique/Robotique_theorique.html">Robotique Théorique</a></li>
-        <li><a href="Modelisation/Robot_classique.html">Robot Classique</a></li>
-        <li><a href="Modelisation/Commande_optimale.html">Commande Optimale</a></li>
+        <li><a href="Robotique_theorique.html">Robotique Théorique</a></li>
+        <li><a href="Robot_classique.html">Robot Classique</a></li>
+        <li><a href="Commande_optimale.html">Commande Optimale</a></li>
       </ul>
     </li>
     <li>
