--- a/Modelisation/Robotique_theorique/convention_DH.html
+++ b/Modelisation/Robotique_theorique/convention_DH.html
@@ -232,14 +232,14 @@ $$
         la convention DH.   
     </p>
 
-    <img src="PA10_joint.jpg" alt="organisation articulaire PA10-7C">
+    <img src="pa10_joint.jpg" alt="organisation articulaire PA10-7C">
     <div class="legend">
         <p>
             Système de coordonnées du PA10-7C
         </p>
     </div>
  
-    <img src="PA10_lenght.jpg" alt="longueur articulaire PA10-7C">
+    <img src="pa10_lenght.jpg" alt="longueur articulaire PA10-7C">
     <div class="legend"> 
         <p>
             Longueur articulaire PA10-7C
@@ -461,6 +461,7 @@ plt.show()
 
 </body>
 </html>
+
 
 
 
