--- a/Modelisation/Robotique_theorique/navbar_robot_theo.html
+++ b/Modelisation/Robotique_theorique/navbar_robot_theo.html
@@ -1,28 +1,23 @@
 <nav>
   <ul>
-    <li><a href="../../index.html" class="active">Accueil</a></li>
+    <li><a href="../../index.html" >Accueil</a></li>
     <li>
-      <a href="#">Modélisation Systèmes et Robotique ▼</a>
+      <a href="#" class="active" >Modélisation Systèmes et Robotique ▼</a>
       <ul>
         <li><a href="Robotique_theorique.html">Robotique Théorique</a></li>
         <li><a href="Commande_optimale.html">Commande Optimale</a></li>
       </ul>
     </li>
     <li>
-      <a href="#">Projets Hardware ▼</a>
+      <a href="#" >Projets Hardware ▼</a>
       <ul>
-        <li><a href="Robot_Delta.html">Robot Delta</a></li>
-        <li><a href="Robot_gravity_cancel.html">3 DOF Gravity Cancel</a></li>
-        <li><a href="Robot_self_balancing.html">Robot Self Balancing</a></li>
+        <li><a href="Delta.html">Robot Delta</a></li>
+        <li><a href="Gravity_Cancel.html">Robot Anti Gravité</a></li>
+        <li><a href="Balance.html">Robot Self Balancing</a></li>
       </ul>
     </li>
     <li>
-      <a href="#">Vision par Ordinateur ▼</a>
-      <ul>
-        <li><a href="Vision_Software.html">Software</a></li>
-        <li><a href="Vision_Hardware.html">Hardware</a></li>
-        <li><a href="Vision_link_SoftHard.html">Liaison Soft//Hard</a></li>
-      </ul>
+      <a href="Vision_ordinateur.htlm">Vision par Ordinateur </a>
     </li>
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
