--- a/Modelisation/Robotique_theorique/navbar_robot_theo.html
+++ b/Modelisation/Robotique_theorique/navbar_robot_theo.html
@@ -11,13 +11,13 @@
     <li>
       <a href="#" >Projets Hardware ▼</a>
       <ul>
-        <li><a href="Delta.html">Robot Delta</a></li>
-        <li><a href="Gravity_Cancel.html">Robot Anti Gravité</a></li>
-        <li><a href="Balance.html">Robot Self Balancing</a></li>
+        <li><a href="Projet/Delta.html">Robot Delta</a></li>
+        <li><a href="Projet/Gravity_Cancel.html">Robot Anti Gravité</a></li>
+        <li><a href="Projet/Balance.html">Robot Self Balancing</a></li>
       </ul>
     </li>
     <li>
-      <a href="Vision_ordinateur.htlm">Vision par Ordinateur </a>
+      <a href="Vision/Vision_ordinateur.htlm">Vision par Ordinateur </a>
     </li>
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
