--- a/Projet/Gravity_Cancel.html
+++ b/Projet/Gravity_Cancel.html
@@ -136,7 +136,7 @@
         <p>
             J'ai déja discuter de la théorie pur sur l'équilibrage statique <br>
             Vous pouvez retrouver la page concerné 
-            <a href=\Modelisation\Robotique_theorique\jacobienne_manipulabilite.html> ici</a> 
+            <a href=Modelisation\Robotique_theorique\jacobienne_manipulabilite.html> ici</a> 
         </p>
 
         <p>
@@ -1038,3 +1038,4 @@ finally:
 </body>
 
 </html>
+
