--- a/Modelisation/Robotique_theorique/parallele.html
+++ b/Modelisation/Robotique_theorique/parallele.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Robotique Théorique</title>
+  <title>Robotique Parallele</title>
   <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -672,6 +672,7 @@ J = A^+ \, B
 </body>
 
 </html>
+
 
 
 
