--- a/Modelisation/Robotique_theorique/Controle_force.html
+++ b/Modelisation/Robotique_theorique/Controle_force.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Robotique Théorique</title>
+  <title>Controle par Force</title>
   <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -757,6 +757,7 @@ end
 </body>
 
 </html>
+
 
 
 
