--- a/Modelisation/Robotique_theorique/generation_mouvement.html
+++ b/Modelisation/Robotique_theorique/generation_mouvement.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Robotique Théorique</title>
+  <title>Generation de mouvement</title>
   <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -893,5 +893,6 @@ plt.show()
 </body>
 
 </html>
+
 
 
