--- a/Modelisation/Robotique_theorique/redondance.html
+++ b/Modelisation/Robotique_theorique/redondance.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Robotique Théorique</title>
+  <title>Principe de redondance</title>
   <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -670,4 +670,5 @@ for q in positions_qi:
 </body>
 
 </html>
+
 
