--- a/Modelisation/Robotique_theorique/mgd_mgi_6axes.html
+++ b/Modelisation/Robotique_theorique/mgd_mgi_6axes.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Robotique Théorique</title>
+  <title>Modeles Geometriques</title>
   <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -884,3 +884,4 @@ print(np.round(q[:6],2))
 </body>
 
 </html>
+
