--- a/Projet/Delta.html
+++ b/Projet/Delta.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Robotique Théorique</title>
+  <title>Robot Delta</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -1023,4 +1023,5 @@ for i in range(int(nombre_pts)):
 </body>
 
 </html>
+
 
