--- a/Projet/Delta.html
+++ b/Projet/Delta.html
@@ -156,7 +156,7 @@
         </p>
         <br>
 
-        <img src="delta_espace.jpg" alt="delta_MGI">
+        <img src="delta_espace.jpg" alt="delta_MGI_et_espace">
             <div class="legend">
                     <p>visualisation MGI & de l'espace de travail type d'un robot Delta</p>
             </div> 
@@ -426,7 +426,7 @@ print(sa, sb)
         </p>
 
 
-        <img src="delta_traj.gif" alt="inverse Dynamics">
+        <img src="delta_traj.gif" alt="trajectoire_carre_gif">
             <div class="legend">
                     <p>Trajectoire carré par interpolation d'ordre 5</p>
             </div> 
@@ -436,7 +436,7 @@ print(sa, sb)
             Et pour les différentes valeurs d'angles des articulations : 
         </p>
 
-        <img src="delta_traj_q.jpg" alt="inverse Dynamics">
+        <img src="delta_traj_q.jpg" alt="evolution_articulation_trajectoire_carre">
             <div class="legend">
                     <p>Valeurs d'angles des articulations de la trajectoire précédente</p>
             </div> 
@@ -787,7 +787,7 @@ plt.show()
             Voici à quoi ressemble le robot après l'avoir monté :
         </p>
 
-        <img src="delta_haut.jpg" alt="Delta"> 
+        <img src="delta_haut.jpg" alt="Delta_top"> 
             <div class="legend">
                     <p>Maquette de Robot Delta vu de haut</p>
             </div> 
@@ -798,7 +798,7 @@ plt.show()
             et les grands plan pour ne par tout re imprimer en cas d'erreur.
         </p>
 
-        <img src="delta_bas.jpg" alt="Delta">
+        <img src="delta_bas.jpg" alt="Delta_bottom">
             <div class="legend">
                     <p>Maquette de Robot Delta vu de dessous</p>
             </div>  
@@ -807,7 +807,7 @@ plt.show()
             La principale contrainte pour ce type de robot est la robustesse.
         </p>
 
-        <img src="delta.jpg" alt="Delta">
+        <img src="delta.jpg" alt="Delta_DIY">
             <div class="legend">
                     <p>Maquette de Robot Delta</p>
             </div> 
@@ -1023,5 +1023,6 @@ for i in range(int(nombre_pts)):
 </body>
 
 </html>
+
 
 
